--- a/app/views/mailers/administrator_notifications/account_notification_mailer/account_deletion.liquid
+++ b/app/views/mailers/administrator_notifications/account_notification_mailer/account_deletion.liquid
@@ -13,4 +13,4 @@
 <p><a href="{{ action_url }}">Cancel Account Deletion</a></p>
 
 <p>Thank you,<br>
-{{ global_config['BRAND_NAME'] || 'Support Team' }}</p> 
+{{ ENV['BRAND_NAME'] || 'Support Team' }}</p>
