--- a/app/views/mailers/administrator_notifications/account_compliance_mailer/account_deleted.liquid
+++ b/app/views/mailers/administrator_notifications/account_compliance_mailer/account_deleted.liquid
@@ -1,9 +1,9 @@
 <p>Hello,</p>
 
-<p>This is a notification to inform you that an account has been permanently deleted from your {{ global_config['BRAND_NAME'] || 'system' }} instance.</p>
+<p>This is a notification to inform you that an account has been permanently deleted from your {{ ENV['BRAND_NAME'] || 'system' }} instance.</p>
 
 <p>
-  <strong>{{ global_config['BRAND_NAME'] || 'System' }} Installation:</strong> {{ meta.instance_url }}<br>
+  <strong>{{ ENV['BRAND_NAME'] || 'System' }} Installation:</strong> {{ meta.instance_url }}<br>
   <strong>Account ID:</strong> {{ meta.account_id }}<br>
   <strong>Account Name:</strong> {{ meta.account_name }}<br>
   <strong>Deletion due at:</strong> {{ meta.marked_for_deletion_at }}<br>
@@ -27,4 +27,4 @@
 <p>This email serves as a record for compliance purposes.</p>
 
 <p>Thank you,<br>
-{{ global_config['BRAND_NAME'] || 'System' }} Support</p>
+{{ ENV['BRAND_NAME'] || 'System' }} Support</p>
