--- a/app/views/public/api/v1/portals/_footer.html.erb
+++ b/app/views/public/api/v1/portals/_footer.html.erb
@@ -5,14 +5,14 @@
 
         <img
           class="w-4 h-4"
-          alt="<%= @global_config['BRAND_NAME'] %>"
+          alt="<%= @ENV['BRAND_NAME'] %>"
           src="<%= @global_config['LOGO_THUMBNAIL'] %>"
         />
       <p class="text-slate-700 dark:text-slate-300 text-sm font-medium text-center">
         <%= I18n.t('public_portal.footer.made_with') %>
-       
-          <a class="hover:underline" href="<%= @global_config['BRAND_URL'] %>" target="_blank" rel="noopener noreferrer nofoll/ow"><%= @global_config['BRAND_NAME'] %></a>
-    
+
+          <a class="hover:underline" href="<%= @global_config['BRAND_URL'] %>" target="_blank" rel="noopener noreferrer nofoll/ow"><%= @ENV['BRAND_NAME'] %></a>
+
       </p>
     </div>
   </div>
